[profile.release]
debug = true

[workspace]
members = ["dmbc", "dmbc-node", "dmbc-fuzzer", "dmbc-discovery", "dmbc-flooder", "dmbc-bot", "dep/exonum", "dep/exonum", "dep/exonum_librocksdb-sys"]
default-members = ["dmbc-node", "dmbc-discovery"]

[patch.crates-io]
exonum = { path = "dep/exonum" }
exonum_librocksdb-sys = { path = "dep/exonum_librocksdb-sys" }
prometheus = { git = "https://github.com/niksaak/rust-prometheus", rev="abd94f8" }
