[profile.release]
debug = true

[workspace]
members = ["dmbc", "dmbc-node", "dmbc-fuzzer", "dmbc-discovery", "dmbc-flooder", "dmbc-bot", "dmbc-capi", "dep/exonum", "dep/exonum_librocksdb-sys"]
default-members = ["dmbc", "dmbc-node", "dmbc-discovery", "dmbc-capi"]

[patch.crates-io]
exonum = { path = "dep/exonum" }
prometheus = { git = "https://github.com/niksaak/rust-prometheus", rev="abd94f8" }
