[package]
name = "dmbc-bot"
version = "0.1.0"
authors = ["Mikola Samardak <niksaak@gmail.com>"]

[dependencies]
dmbc = { path = "../dmbc" }
rand = "*"
exonum = "0.4"
mio = "*"
mio_httpc = { version = "0.4", features = ["native"] }
serde = "*"
serde_json = "*"
fnv = "*"
nix = "*"
curl = "0.4.11"
log = "*"
env_logger = "*"