[package]
name = "dmbc-bot"
version = "2.0.0"
authors = ["Ilya Sinyakin <sinyakin.ilya@gmail.com>", "Mikola Samardak <niksaak@gmail.com>" ,"Taras Shchybovyk <tshchybo@gmail.com>"]
publish = false

[dependencies]
dmbc = { path = "../dmbc" }
rand = "0.4.2"
exonum = "0.5"
serde = "1.0.30"
serde_json = "1.0"
nix = "*"
curl = "0.4.11"
log = "*"
env_logger = "*"
