[package]
name = "dmbc-discovery"
version = "0.1.0"
authors = ["Mikola Samardak <niksaak@gmail.com>"]

[dependencies]
dmbc = { path = "../dmbc" }
hyper = "0.11"
exonum = "0.4"
exonum-configuration = "0.4"
futures = "0.1"
url = "1.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio-core = "0.1"
tokio-timer = "0.1"

