[package]
name = "dmbc-discovery"
version = "2.1.2"
authors = ["Ilya Sinyakin <sinyakin.ilya@gmail.com>", "Mikola Samardak <niksaak@gmail.com>" ,"Taras Shchybovyk <tshchybo@gmail.com>"]
publish = false

[dependencies]
dmbc = { path = "../dmbc" }
hyper = "0.11"
exonum = "0.5"
exonum-configuration = "0.5"
futures = "0.1"
url = "1.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio-core = "0.1"
tokio-timer = "0.1"
toml = "0.4"

