[package]
name = "dmbc-flooder"
version = "0.2.0"
authors = ["Ilya Sinyakin <sinyakin.ilya@gmail.com>", "Mikola Samardak <niksaak@gmail.com>" ,"Taras Shchybovyk <tshchybo@gmail.com>"]

[dependencies]
dmbc = { path = "../dmbc" }
rand = "*"
exonum = "0.5"
mio = "*"
mio_httpc = { version = "0.4", features = ["native"] }
serde = "*"
serde_json = "*"
fnv = "*"
nix = "*"
