[package]
name = "dmbc-node"
version = "2.0.1"
authors = ["Ilya Sinyakin <sinyakin.ilya@gmail.com>", "Mikola Samardak <niksaak@gmail.com>" ,"Taras Shchybovyk <tshchybo@gmail.com>"]
publish = false

[[bin]]
name = "dmbc-node"
path = "src/main.rs"
test = false
bench = false
doc = false

[dependencies]
dmbc = { path = "../dmbc" }
exonum = "0.5"
exonum-configuration = "0.5"
curl = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.31"
