[package]
name = "dmbc"
version = "2.1.0"
authors = ["Ilya Sinyakin <sinyakin.ilya@gmail.com>", "Mikola Samardak <niksaak@gmail.com>" ,"Taras Shchybovyk <tshchybo@gmail.com>"]
publish = false

[features]
default = []
fuzzing = []

[dependencies]
iron = "0.6.0"
params = "0.8.0"
bodyparser = "0.8.0"
router = "0.6.0"
nats = { git = "https://github.com/jedisct1/rust-nats", rev = "21919e5" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.4.5"
uuid = { version = "0.5", features = ["v5"] }
exonum = "0.5"
exonum-configuration = "0.5"
exonum_rocksdb = "0.7"
hyper = "0.10.13"
unicase = "1.0"
log = "0.4"
chrono = "0.4"
prometheus = "0.4.1"
lazy_static = "1.0"
percent-encoding = "1.0.1"
extprim = "1.5"

[dev-dependencies]
exonum-testkit = "0.5"
mount = "0.4"

[dev-dependencies.iron-test]
version = "0.6.0"
